# sanitext

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
demos/: demo_before_after_report.py  demo_cli_gate.py  demo_control_chars.py  demo_homoglyph_domain.py  demo_mixed_pii_unicode.py  demo_sarif_export.py  demo_trojan_source.py  demo_zero_width_smuggling.py  run_all.py
docs/: ARCHITECTURE.md  CONFUSABLES.md  PII.md  TROJAN-SOURCE.md
examples/: sample_in.txt  trojan_source.c
sanitext/: __init__.py  bidi.py  cli.py  confusables.py  core.py  detectors.py  lexicons.py  policies.py  report.py  rewriter.py  sanitizer.py  sarif.py  unicode_scan.py
tests/: test_bidi.py  test_cli.py  test_confusables.py  test_core.py  test_detectors.py  test_idempotence.py  test_report.py  test_sanitizer.py  test_sarif.py  test_zero_width.py
