[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sanitext"
version = "0.2.0"
description = "Defensive Unicode-security text sanitizer: detect and strip bidi/Trojan-Source, zero-width, control chars, and homoglyphs, plus optional PII/secret redaction."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Cognis Digital LLC" }]
keywords = [
    "security",
    "unicode",
    "homoglyph",
    "confusables",
    "trojan-source",
    "bidi",
    "zero-width",
    "sanitize",
    "pii",
    "redaction",
    "sarif",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Text Processing :: Filters",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cognis-digital/sanitext"
Repository = "https://github.com/cognis-digital/sanitext"
Issues = "https://github.com/cognis-digital/sanitext/issues"

[project.optional-dependencies]
# Optional LLM re-authoring via any OpenAI-compatible endpoint (hosted or local).
openai = ["openai>=1.0"]
dev = ["pytest>=7"]

[project.scripts]
sanitext = "sanitext.cli:main"

[tool.setuptools.packages.find]
include = ["sanitext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
